[package]
name = "fp_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1"
time = { version = "0.3", features = ["formatting"] }
itertools = "0.11"
enum-iterator = "1.4.0"
nohash-hasher = "0.2.0"
tokio-test = "0.4.2"
mysql = "*"
tokio = { version = "1.27.0", features = ["full"] }
syn = "0"
colored = "2.0.0"
fern = "0.6.2"
log = "0.4.17"
rand = "0.8.4"
async-trait = "0.1.68"

[dependencies.uuid]
version = "1.3.0"
features = [
     "v4",
     "fast-rng",
     "macro-diagnostics",
]

[lib]
doctest = false

[dependencies.derive_data]
path = "proc_macros"
